kubernetes/thirty-degrees-homepage/01-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: thirty-degrees-homepage

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 3000
  selector:
    app: thirty-degrees-homepage
